<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.12">
  <POU Name="PiezoSerial" Id="{04ed9258-9624-4f29-9f34-d3e5ff9995d6}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PiezoSerial
VAR
	//PI Serial
	fbE621SerialDriverM1 : FB_PI_E621_SerialDriver;
	rtInitParams	:	R_TRIG;
	tonTimeoutRstM1	: TON := (PT:=T#2S); //For timeout reset
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[//M1 Piezo E-621
///////////////////////
	fbE621SerialDriverM1.i_xExecute := TRUE;
	fbE621SerialDriverM1.i_xExecute R= fbE621SerialDriverM1.q_xDone;
	fbE621SerialDriverM1(
		iq_stPiezoAxis:= M1L0_Pitch.Piezo, 
		iq_stSerialRXBuffer:= Serial_P1_SerialRXBuffer, 
		iq_stSerialTXBuffer:= Serial_P1_SerialTXBuffer);]]></ST>
    </Implementation>
  </POU>
</TcPlcObject>